# libisyntax

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
python_isyntax/: README.md  pyproject.toml
python_isyntax/python_isyntax/: __init__.py  isyntax.py  lib.py
python_isyntax/tests/: test_basic.py
src/platform/: platform.h
